[tool.poetry]
name = "graph"
version = "0.1.0"
description = ""
authors = ["Julius Pahama <julius.pahama@g.msuiit.edu.ph>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt5 = "^5.15.11"

[tool.poetry.scripts]
run_graph = "graph.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
