[tool.poetry]
name = "graph"
version = "0.1.0"
description = "Algorithmic Graph Theory activity."
authors = ["Julius Pahama <julius.pahama@g.msuiit.edu.ph>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

[tool.poetry.scripts]
run_graph = "graph.main:main"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
